feat: done  with the updates in the product management api and testing
